--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,13 @@ node_modules
 .pnp.js
 package-lock.json
 
+# Yarn v2
+.yarn/*
+!.yarn/releases
+!.yarn/plugins
+!.yarn/sdks
+!.yarn/versions
+
 # testing
 /coverage
 /reports
@@ -19,6 +26,7 @@ junit.xml
 
 # cache
 .cache
+.eslintcache
 
 # misc
 .DS_Store
@@ -29,6 +37,4 @@ junit.xml
 .idea
 
 # logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+*.log
