feat: add generate colors from Figma and export
Closes T-4403.

--- a/.eslintrc
+++ b/.eslintrc
@@ -6,7 +6,7 @@
     "prettier"
   ],
   "parserOptions": {
-    "project": ["./tsconfig.json"]
+    "project": ["./tsconfig.json", "./scripts/tsconfig.json"]
   },
   "root": true,
   "rules": {
