--- a/package.json
+++ b/package.json
@@ -29,11 +29,17 @@
   },
   "devDependencies": {
     "@skypack/package-check": "^0.2.2",
+    "@types/lodash": "^4.14.168",
+    "@types/node": "^14.14.45",
+    "@types/prettier": "^2.2.3",
+    "camelcase": "^6.2.0",
     "eslint": "^7.26.0",
     "eslint-config-canonical": "^26.2.3",
     "eslint-config-prettier": "^8.3.0",
+    "figma-js": "^1.13.0",
     "husky": "^6.0.0",
     "lint-staged": "^11.0.0",
+    "lodash": "^4.17.21",
     "prettier": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
