feat: add textStyle generation
Closes T-4404

--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "scripts": {
     "check:package": "yarn package-check",
     "check:tsc": "yarn tsc --noEmit",
+    "generate:colors": "node ./scripts/dist/generateColors",
+    "generate:textStyles": "node ./scripts/dist/generateTextStyles",
     "prepare": "husky install"
   },
   "devDependencies": {
