feat: add theme and theme utils
Closes T-4400
Closes T-4399

--- a/.eslintrc
+++ b/.eslintrc
@@ -3,6 +3,7 @@
     "canonical",
     "canonical/react",
     "canonical/typescript",
+    "canonical/jest",
     "prettier"
   ],
   "parserOptions": {
