--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "check:tsc": "yarn tsc --noEmit",
     "generate:colors": "node ./scripts/dist/generateColors",
     "generate:textStyles": "node ./scripts/dist/generateTextStyles",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test": "yarn jest"
   },
   "devDependencies": {
     "@skypack/package-check": "^0.2.2",
+    "@types/jest": "^26.0.23",
     "@types/lodash": "^4.14.168",
     "@types/node": "^14.14.45",
     "@types/prettier": "^2.2.3",
@@ -40,11 +42,13 @@
     "eslint-config-prettier": "^8.3.0",
     "figma-js": "^1.13.0",
     "husky": "^6.0.0",
+    "jest": "^26.6.3",
     "lint-staged": "^11.0.0",
     "lodash": "^4.17.21",
     "prettier": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   }
 }
