--- a/package.json
+++ b/package.json
@@ -34,6 +34,8 @@
     "test": "yarn jest"
   },
   "devDependencies": {
+    "@commitlint/cli": "^12.1.4",
+    "@commitlint/config-conventional": "^12.1.4",
     "@skypack/package-check": "^0.2.2",
     "@svgr/core": "^5.5.0",
     "@svgr/plugin-jsx": "^5.5.0",
