--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "prettier": "^2.3.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "semantic-release": "^17.4.3",
     "ts-jest": "^26.5.6",
     "typescript": "^4.2.4"
   },
