--- a/.releaserc
+++ b/.releaserc
@@ -1,3 +1,9 @@
 {
-  "branches": ["main"]
+  "branches": ["main"],
+  "plugins": [
+    "@semantic-release/commit-analyzer",
+    ["@semantic-release/exec", {
+      "prepareCmd": "./bin/prepare.sh"
+    }],
+  ]
 }
