--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   },
   "module": "./dist/index.js",
   "exports": {
-    ".": "./dist/index.js"
+    ".": "./dist/index.js",
+    "./*": "./dist/*.js"
   },
   "types": "./dist/index.d.ts",
   "files": [
@@ -36,6 +37,7 @@
   "devDependencies": {
     "@commitlint/cli": "^12.1.4",
     "@commitlint/config-conventional": "^12.1.4",
+    "@semantic-release/exec": "^5.0.0",
     "@skypack/package-check": "^0.2.2",
     "@svgr/core": "^5.5.0",
     "@svgr/plugin-jsx": "^5.5.0",
