fix: release notes generator

--- a/.releaserc
+++ b/.releaserc
@@ -2,6 +2,7 @@
   "branches": ["main"],
   "plugins": [
     "@semantic-release/commit-analyzer",
+    "@semantic-release/release-notes-generator",
     ["@semantic-release/exec", {
       "prepareCmd": "./bin/prepare.sh"
     }],
