fix: ci adjust package type to json

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -36,6 +36,9 @@ jobs:
       - name: 🏗 Building
         run: yarn build
 
+      - name: 🔧 Set Package type to "module"
+        run: ./bin/prepare.sh
+
       - name: 🚀 Releasing
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
