fix: missing typeVersions map

--- a/package.json
+++ b/package.json
@@ -14,6 +14,11 @@
     "./*": "./dist/*.js"
   },
   "types": "./dist/index.d.ts",
+  "typesVersions": {
+    "*": {
+      "*": ["dist/*"]
+    }
+  },
   "files": [
     "dist"
   ],
