--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
   "types": "./dist/index.d.ts",
   "typesVersions": {
     "*": {
-      "*": ["dist/*"]
+      "*": [
+        "dist/*"
+      ]
     }
   },
   "files": [
@@ -55,8 +57,8 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "camelcase": "^6.2.0",
-    "eslint": "^7.26.0",
-    "eslint-config-canonical": "^26.2.3",
+    "eslint": "^7.32.0",
+    "eslint-config-canonical": "^30.0.0",
     "eslint-config-prettier": "^8.3.0",
     "figma-js": "^1.14.0",
     "fs-extra": "^10.0.0",
@@ -75,5 +77,6 @@
   },
   "peerDependencies": {
     "react": "^16.14.0 || ^17.0.0"
-  }
+  },
+  "dependencies": {}
 }
