--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@contrawork/ui-kit",
+  "name": "@contra/ui-kit",
   "version": "2.0.0",
   "description": "A React component library implementing Contra's Design System.",
   "repository": "https://github.com/contrawork/ui-kit",
