--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
   "publishConfig": {
     "registry": "https://npm.pkg.github.com"
   },
-  "module": "./dist/index.js",
+  "main": "dist/cjs/index.js",
+  "module": "./dist/esm/index.js",
+  "types": "./dist/esm/index.d.ts",
   "exports": {
-    ".": "./dist/index.js",
-    "./*": "./dist/*.js"
+    "require": "./dist/cjs/index.js",
+    "import": "./dist/esm/index.js",
+    "default": "./dist/esm/index.js"
   },
-  "types": "./dist/index.d.ts",
   "files": [
     "dist"
   ],
@@ -24,7 +26,9 @@
     "uikit"
   ],
   "scripts": {
-    "build": "yarn tsc",
+    "build": "yarn build:esm && yarn build:cjs",
+    "build:cjs": "node ./bin/build-cjs.js",
+    "build:esm": "yarn tsc --project tsconfig.build.json",
     "check:package": "yarn package-check",
     "check:tsc": "yarn tsc --noEmit",
     "generate:colors": "node ./scripts/dist/generateColors",
@@ -50,6 +54,7 @@
     "@types/react": "^17.0.34",
     "@types/react-dom": "^17.0.11",
     "camelcase": "^6.2.0",
+    "esbuild": "^0.13.13",
     "eslint": "^7.32.0",
     "eslint-config-canonical": "^30.0.0",
     "eslint-config-prettier": "^8.3.0",
