--- a/renovate.json
+++ b/renovate.json
@@ -1,5 +1,14 @@
 {
-  "extends": [
-    "config:base"
-  ]
+  "dependencyDashboard": true,
+  "enabledManagers": ["npm"],
+  "extends": ["config:base"],
+  "ignoreDeps": [],
+  "labels": ["dependencies"],
+  "packageRules": [
+    {
+      "matchUpdateTypes": ["minor", "patch"],
+      "addLabels": ["self-review"]
+    }
+  ],
+  "rangeStrategy": "pin"
 }
