chore: add stitches.config.ts to eslint config

--- a/.eslintignore
+++ b/.eslintignore
@@ -4,6 +4,7 @@ dist
 commitlint.config.js
 prettier.config.js
 jest.config.js
+stitches.config.ts
 /src/icons
 !/src/icons/index.ts
 /src/primitives/colorPrimitives.ts
