--- a/package.json
+++ b/package.json
@@ -85,6 +85,8 @@
     "react": "^16.14.0 || ^17.0.0"
   },
   "dependencies": {
-    "@stitches/react": "^1.2.5"
+    "@stitches/react": "^1.2.5",
+    "react-aria": "^3.12.0",
+    "react-stately": "^3.11.0"
   }
 }
