--- a/package.json
+++ b/package.json
@@ -86,6 +86,7 @@
     "react": "^16.14.0 || ^17.0.0"
   },
   "dependencies": {
+    "gsap": "^3.9.1",
     "react-aria": "^3.12.0",
     "react-stately": "^3.11.0"
   }
