--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "import": "./dist/esm/index.js",
     "default": "./dist/esm/index.js"
   },
+  "type":"module",
   "files": [
     "dist"
   ],
@@ -28,7 +29,7 @@
   "scripts": {
     "build": "yarn build:esm && yarn build:cjs",
     "build:cjs": "node ./bin/build-cjs.js",
-    "build:esm": "yarn tsc --project tsconfig.build.json",
+    "build:esm": "yarn tsc --project tsconfig.build.json && tsc-esm-fix --tsconfig ./tsconfig.build.json",
     "build:storybook": "build-storybook",
     "check:package": "yarn package-check",
     "check:tsc": "yarn tsc --noEmit",
@@ -79,6 +80,7 @@
     "react-dom": "^17.0.2",
     "semantic-release": "^18.0.0",
     "ts-jest": "^27.0.7",
+    "tsc-esm-fix": "^2.20.5",
     "typescript": "^4.4.4"
   },
   "peerDependencies": {
